# game-project

./: .gitignore  README.md  アンナのお菓子な大冒険.sln
アンナのお菓子な大冒険/: AnimationSystem.h  AnnaMusicGame.cpp  AnnaMusicGame.h  Attack.h  AttackInfo.h  AttackManager.h  BGMManager.hpp  BackGround.h  BeltConveyorButton.h  Block.cpp  Block.h  Boss.cpp  Boss.h  BunchoUI.cpp  BunchoUI.hpp  BunchoUI.ipp  CMakeLists.txt  CharacterSystem.h  ChocolateButton.cpp  ChocolateButton.h  Common.cpp  Common.h  ControllerInput.h  ControllerManager.h  CookieButton.cpp  CookieButton.h  CookieItem.h  DataManager.cpp  DataManager.h  Effect.h  EndRollScene.h  Enemy.cpp  Enemy.h  EnemyAdder.cpp  EnemyAdder.h  Entity.cpp  Entity.h  ExplosionEffect.cpp  ExplosionEffect.h  FadeUpEffect.cpp  (+92 more)
アンナのお菓子な大冒険/App/: backGround.json  backGround1.json  backGround2.json  caveStage1.json  caveStage2.json  caveStage4.json  caveStageBoss.json  cloudStage1.json  cloudStage2.json  cloudStage3.json  cloudStage4.json  cloudStageBoss.json  map.json  s1.json  s2.json  s3.json  s4.json  s5.json  s6.json  saveData.json  snowStage1.json  snowStage2.json  snowStage3.json  snowStage4.json  stage1.json  startStage.json  startStage_back1.json  図鑑.txt
アンナのお菓子な大冒険/App/AnnaMusicGame/: 0_notes.txt  1_dates.txt  3_dates.txt  3_notes.txt
アンナのお菓子な大冒険/App/SignboardText/: 看板0.txt  看板2.txt  看板4.txt  看板5.txt  看板6.txt  看板テスト.txt
アンナのお菓子な大冒険/App/念のため保存/: s1.json  (+6 more)
アンナのお菓子な大冒険/Prg/: Action.cpp  Action.h  Actions.cpp  Actions.h  Condition.cpp  Condition.h  Init.h
ステージエディタ改/: CMakeLists.txt  Main.cpp  table.h  ステージエディタ改.vcxproj  ステージエディタ改.vcxproj.filters
ステージエディタ改/App/: background.json  background2.json  stage1background.json
(+118 files in other folders)
